--- a/task6.html
+++ b/task6.html
@@ -40,29 +40,29 @@
       <th>Age</th>
     </tr>
     <tr>
-      <td>Mohansundar</td>
-      <td>Kankasadabai</td>
-      <td>20</td>
+      <td>John</td>
+      <td>Doe</td>
+      <td>60</td>
     </tr>
     <tr>
-      <td>Mohansundar</td>
-      <td>Kankasadabai</td>
-      <td>20</td>
+      <td>Christian</td>
+      <td>Bale</td>
+      <td>45</td>
     </tr>
     <tr>
-      <td>Mohansundar</td>
-      <td>Kankasadabai</td>
-      <td>20</td>
+      <td>Sharukh</td>
+      <td>Khan</td>
+      <td>52</td>
     </tr>
     <tr>
-      <td>Mohansundar</td>
-      <td>Kankasadabai</td>
-      <td>20</td>
+      <td>Ajith</td>
+      <td>Kumar</td>
+      <td>48</td>
     </tr>
     <tr>
-      <td>Mohansundar</td>
-      <td>Kankasadabai</td>
-      <td>20</td>
+      <td>Amitabh</td>
+      <td>Bhachchan</td>
+      <td>80</td>
     </tr>
 </body>
 
