--- a/task6.html
+++ b/task6.html
@@ -35,34 +35,34 @@
   </style>
   <table>
     <tr>
-      <th>FirstName</th>
-      <th>SecondName</th>
-      <th>Age</th>
+      <th>Company</th>
+      <th>Contact</th>
+      <th>Country</th>
     </tr>
     <tr>
-      <td>John</td>
-      <td>Doe</td>
-      <td>60</td>
+      <td>Alfreds Futterkiste</td>
+      <td>Maria Anders</td>
+      <td>Germany</td>
     </tr>
     <tr>
-      <td>Christian</td>
-      <td>Bale</td>
-      <td>45</td>
+      <td>Berglunds snabbop</td>
+      <td>Christina Berglund</td>
+      <td>Sweden</td>
     </tr>
     <tr>
-      <td>Sharukh</td>
-      <td>Khan</td>
-      <td>52</td>
+      <td>Centro comercial Moctezuma</td>
+      <td>Francisco Chang</td>
+      <td>Mexico</td>
     </tr>
     <tr>
-      <td>Ajith</td>
-      <td>Kumar</td>
-      <td>48</td>
+      <td>Ernst Handel</td>
+      <td>Roland Mendel</td>
+      <td>Austria</td>
     </tr>
     <tr>
-      <td>Amitabh</td>
-      <td>Bhachchan</td>
-      <td>80</td>
+      <td>Island Trading</td>
+      <td>Helen Bennett</td>
+      <td>UK</td>
     </tr>
 </body>
 
