--- a/task1.html
+++ b/task1.html
@@ -11,7 +11,7 @@ img {
     <img src="fifa.png" alt="fifa" width="500" height="200">
 
     <h2>FIFA World Cup 2014 News</h2>
-    <p>Argentina will face the Netherlands in the quarterfinal of the <b>FIFA World Cup</b> 2022 on Friday, December 9. The clash of the European and South American giants is likely to be a high-octane game<br><br>
+    <p style="font-family:courier;">Argentina will face the Netherlands in the quarterfinal of the <b>FIFA World Cup</b> 2022 on Friday, December 9. The clash of the European and South American giants is likely to be a high-octane game<br><br>
         as both teams are strong contenders to win the World Cup in Qatar.Netherlands defeated USA 3-1 in the round of 16. However, while they dominated the underdogs, leaking a goal against<br><br>
         the US would be worrying Louis van Gaal. Argentina faced a much tougher side, Australia, and won the game 2-1.</p>
 
